@@ -23,7 +23,7 @@
  */
 
 /* Command response routines
- * $Id: response.c,v 1.5 2005-07-05 15:42:01 castaglia Exp $
+ * $Id: response.c,v 1.6 2005-09-27 16:11:20 castaglia Exp $
  */
 
 #include "conf.h"
@@ -124,8 +124,11 @@ void pr_response_add_err(const char *numeric, const char *fmt, ...) {
   resp->num = (numeric ? pstrdup(resp_pool, numeric) : NULL);
   resp->msg = pstrdup(resp_pool, resp_buf);
   
-  for (head = &resp_err_list; *head && (!numeric || !(*head)->num ||
-    strcmp((*head)->num, numeric) <= 0); head = &(*head)->next);
+  for (head = &resp_err_list;
+       *head
+       && (!numeric || !(*head)->num || strcmp((*head)->num, numeric) <= 0)
+       && !(numeric && !(*head)->num && head == &resp_list);
+       head = &(*head)->next);
 
   resp->next = *head;
   *head = resp;
@@ -145,8 +148,11 @@ void pr_response_add(const char *numeric, const char *fmt, ...) {
   resp->num = (numeric ? pstrdup(resp_pool, numeric) : NULL);
   resp->msg = pstrdup(resp_pool, resp_buf);
   
-  for (head = &resp_list; *head && (!numeric || !(*head)->num ||
-    strcmp((*head)->num, numeric) <= 0); head = &(*head)->next);
+  for (head = &resp_list;
+       *head
+       && (!numeric || !(*head)->num || strcmp((*head)->num, numeric) <= 0)
+       && !(numeric && !(*head)->num && head == &resp_list);
+       head = &(*head)->next);
 
   resp->next = *head;
   *head = resp;
